Fix special-offer article alignment

--- a/src/sass/sections/_section-buttons.scss
+++ b/src/sass/sections/_section-buttons.scss
@@ -2,4 +2,5 @@
   position: relative;
   display: flex;
   gap: 40px;
+  justify-content: center;
 }
